--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Site</title>
+    <title></title>
 </head>
 <body>
     <h1>Hello Marshall</h1>
@@ -14,7 +14,7 @@
     
     <form method="POST">
         <label for="name">Username:</label>
-        <input type="text" id="name" name="name" placeholder="Name#Tag" required><br><br>
+        <input type="text" id="name" name="name" placeholder="Name#Tag" required><br>
         <input type="submit" value="Submit">
     </form>
 </body>
